@@ -16,6 +16,7 @@ gem 'timecop'
 gem 'webmock'
 
 # Integrations
+gem 'aws-sdk-sqs', require: nil
 gem 'elasticsearch', require: nil
 gem 'fakeredis', require: nil
 gem 'faraday', require: nil
@@ -24,6 +25,7 @@ gem 'mongo', require: nil
 gem 'opentracing', require: nil
 gem 'rake', require: nil
 gem 'sequel', require: nil
+gem 'shoryuken', require: nil
 gem 'sidekiq', require: nil
 gem 'simplecov', require: false, group: :test
 gem 'simplecov-cobertura', require: false, group: :test
